# rust-raytracer

./: Cargo.toml  README.md  image.ppm
parser/: Cargo.toml
parser/src/: generator.rs  lib.rs  types.rs
raytracer/: Cargo.toml
raytracer/src/render/: camera.rs  canvas.rs  mod.rs  world.rs
raytracer/src/units/: color.rs  intersect.rs  matrix.rs  ray.rs  utils.rs
raytracer/src/units/tuple/: point.rs  vector.rs
raytracer/src/world/: environment.rs  light.rs  material.rs  mod.rs
scenes/: scene.yaml  sphere-only-world.yaml
src/: lib.rs
src/render/: camera.rs  canvas.rs  mod.rs  world.rs
src/units/: color.rs  intersect.rs  matrix.rs  mod.rs  objects.rs  ray.rs  sphere.rs  utils.rs
src/units/tuple/: mod.rs  point.rs  vector.rs
src/world/: environment.rs  light.rs  material.rs  mod.rs  patterns.rs
